在jdk7上需要打开这两个参数

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,8 @@
 #JAVA_OPTS=-Xms128m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m
 #GRADLE_OPTS=-Xms128m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m
 
-#org.gradle.jvmargs=-XX:MaxPermSize=1024m
+#org.gradle.jvmargs=-Xms128m -Xmx512m -XX:PermSize=256m -XX:MaxPermSize=512m
 
 systemProp.file.encoding=UTF-8
+
+#EV=4.3.2
