--- a/abs/build.gradle
+++ b/abs/build.gradle
@@ -73,7 +73,11 @@ def beforeArchiveProduct() {
             ext.methods.copyResources(fileNames, source, target)
 
             File plugins = new File(file, 'plugins')
+
+            ext.methods.copyResources(['org.eclipse.osgi_3.12.0.v20171026-1932-agree.jar'], new File(rootDir, 'plugins'), plugins)
+
             ext.methods.deleteBundle(project.name, plugins)
+            ext.methods.deleteBundle('org.eclipse.osgi_.*-\\d+.jar', plugins)
 
             File prefFile = new File(file, 'preferenceServer')
             ext.methods.copyResources(prefs, prefDir, prefFile)
