--- a/changelog.gradle
+++ b/changelog.gradle
@@ -1,6 +1,6 @@
 buildscript {
     repositories {
-        mavenLocal()
+//        mavenLocal()
 //        mavenCentral()
 //        jcenter()
         maven {
