--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@
 systemProp.file.encoding=UTF-8
 
 #EV=4.3.2
-EP=eclipse_plugins
-localRepo=4.1
-#remoteRepo=4.1
+#EP=eclipse_plugins
+#localRepo=4.1
+remoteRepo=4.1
