两个配置文件都要，不然在4.0上会记不了日志

--- a/build.gradle
+++ b/build.gradle
@@ -175,6 +175,9 @@ subprojects {
 
     if (name == 'cn.com.agree.commons.logging') {
         jar {
+            from('src/commons-logging.properties') {
+                into ''
+            }
             from('logging.properties') {
                 into ''
             }
