这是一个fragment,需要自己添加依赖

--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,12 @@ subprojects {
         }
     }
 
+    if (name == 'cn.com.agree.ab.a4.pub.communication.balance.random') {
+        dependencies {
+            compile project(':cn.com.agree.ab.a4.pub.communication')
+        }
+    }
+
     if (name == 'cn.com.agree.adore2') {
         afterEvaluate {
             def dependencies = project.configurations.getByName('compile').dependencies
