--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,9 @@
 
 systemProp.file.encoding=UTF-8
 
+#BeginDate=20180101000000
+#CycleDays=6
+Qualifier=qualifier
 #EV=4.3.2
 EP=eclipse_plugins
 #localRepo=4.1
