--- a/delta/build.gradle
+++ b/delta/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath "org.eclipse.jgit:org.eclipse.jgit:+"
+        classpath "org.eclipse.jgit:org.eclipse.jgit.java7:+"
         classpath "commons-io:commons-io:+"
         classpath "com.alibaba:fastjson:+"
     }
@@ -77,7 +77,8 @@ JSONObject generateDelta(File projectFile, File outputFile, int interval, Date b
     if (endDate == null) {
         endDate = Calendar.getInstance().time
     }
-    Calendar calendar = new Calendar.Builder().setInstant(endDate).build()
+    Calendar calendar = Calendar.getInstance()
+    calendar.setTime(endDate)
     calendar.add(Calendar.DATE, 0 - interval)
     Date startDate = calendar.time
 
